--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@
 .nav-link
 {
     cursor: pointer;
-    padding: 2px 8px;
+    padding: 5px 10px;
     border-radius: 10px;
     transition: all 0.5s;
 }
@@ -110,7 +110,7 @@
 }
 .Banner-heading
 {
-    font-size: 83px;
+    font-size: 70px;
     font-family: 'poppins';
     color: white;
 }
@@ -123,4 +123,266 @@
     border: 1px solid black;
     cursor: pointer;
     border-radius: 10px;
+}
+
+/* booking area */
+
+.booking
+{
+    width: 100%;
+    padding: 20px 10px;
+    background-color:rgba(255, 255,255, .5);
+    display: flex;
+    column-gap: 25px;
+    /* align-items: center;
+    justify-content: center; */
+}
+
+.inp
+{
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    font-family: 'poppins';
+    row-gap: 5px;
+    justify-content: flex-end;
+}
+input
+{
+    height: 40px;
+    text-indent: 8px;
+    font-size: 16px;
+}
+
+
+.book-btn
+{
+    padding: 10px 30px;
+}
+
+/* about us css */
+
+.about
+{
+    width: 100%;
+    padding: 50px 15%;
+    background-color: white;
+    font-family: 'poppins';
+    font-size: 30px;
+     font-weight: 200;
+    word-spacing: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 30px;
+
+}
+.highlight{
+    font-weight: bold;
+    font-size: 35px;
+}
+.icon
+{
+    font-size: 40px;
+    color: #2deaf2;
+}
+
+/* rooms css */
+
+.rooms
+{
+    width: 100%;
+    padding: 50px 15%;
+    /* background-color: gray; */
+    background-color:#f9f9f9;
+    font-family: 'poppins';
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+.section-title
+{
+    font-size: 30px;
+}
+
+.rooms-area
+{
+    width: 100%;
+    padding: 20px 0px;
+    /* background-color: red; */
+    margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 5%;
+    row-gap: 50px;
+}
+
+.room{
+    width: 30%;
+    background-color: white;
+
+}
+
+.room-img
+{
+    height: 270px;
+    width: 100%;
+    /* background-color: rebeccapurple; */
+    overflow: hidden;
+}
+
+.room-image
+{
+    width: 100%
+}
+.room-details
+{
+    /* background-color: green; */
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    row-gap: 10px;
+
+}
+
+.rm{
+    margin-top: -100px;
+}
+
+/* subscribe css */
+
+.subscribe
+{
+    width: 100%;
+    padding: 50px 15%;
+    /* background-color: red; */
+    display: flex;
+    justify-content: space-between;
+}
+.sub-text
+{
+    width: 30%;
+    padding: 20px;
+    /* background-color: #2deaf2; */
+    display: flex;
+    flex-direction: column;
+    row-gap:20px;
+}
+
+.logo2
+{
+    width: 50%;
+    /* background-color: yellow; */
+    font-family: 'poppins';
+}
+
+.sub-desc
+{
+    width: 100%;
+    font-family: 'poppins';
+    font-size: 15px;
+}
+
+.sub-area
+{
+    width: 40%;
+    padding: 20px;
+    /* background-color: greenyellow; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
+    font-family: 'poppins';
+    row-gap: 20px;
+}
+
+.sub-inp
+{
+    width: 70%;
+    height: 58px;
+}
+.sub-form
+{
+    display: flex;
+    column-gap: 10px;
+}
+
+/* css food Banner */
+.food
+{
+    width: 100%;
+    height: 80vh;
+    padding: 50px 15%;
+    background-color:white;
+    background-image: url(./images/restaurant.jpg);
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.food-detail
+{
+    width: 70%;
+    padding: 50px;
+    /* background-color: rebeccapurple; */
+    font-family: 'poppins';
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    row-gap: 15px;
+}
+.section-header
+{
+font-size: 35px;
+}
+
+/* premium css  */
+
+.premium
+{
+    width: 100%;
+    padding: 50px 15%;
+    background-color: red;
+    font-family: 'poppins';
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.prooms-area
+{
+    width: 100%;
+    height: 1000px;
+    background-color: green;
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+.proom-img
+{
+    width: 30%;
+    height: 1000px;
+    background-color: yellow;
+    overflow: hidden;
+}
+.proom-boxs
+{
+    width: 60%;
+    height: 1000px;
+    background-color: salmon;
+
+}
+
+.proom-image
+{
+    width: 100%;
+}
+
+.proom-box{
+    width: 100%;
+    padding: 20px;
+    background-color: gray;
 }
